log
Wed Apr  6 18:57:35 UTC 2022: 
 tests:  0|6
total_score: 0/70
d33f211
Wed Apr  6 19:03:21 UTC 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:43: error: ‘Hashmap’ undeclared (first use in this function); did you mean ‘HashMap’?
   HashMap * m = (HashMap*) malloc (sizeof(Hashmap));
                                           ^~~~~~~
                                           HashMap
hashmap.c:55:43: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:56:11: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->size = NULL;
           ^
hashmap.c:57:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->capacity = NULL;
               ^
hashmap.c:58:14: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->current = NULL;
              ^
cc1: all warnings being treated as errors
Compilation failed
0fac536
Wed Apr  6 19:03:33 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:11: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->size = NULL;
           ^
hashmap.c:57:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->capacity = NULL;
               ^
hashmap.c:58:14: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->current = NULL;
              ^
cc1: all warnings being treated as errors
Compilation failed
52e1b78
Wed Apr  6 19:04:21 UTC 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
bb78187
Wed Apr  6 19:04:37 UTC 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
61408ff
Wed Apr  6 19:05:06 UTC 2022: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
afa1061
Wed Apr  6 19:05:40 UTC 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
66b5280
Wed Apr  6 19:07:27 UTC 2022: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
f0da2a1
Wed Apr  6 19:07:42 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:11: error: ‘size’ undeclared (first use in this function); did you mean ‘sinl’?
   m->size=size;
           ^~~~
           sinl
hashmap.c:56:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b078f3e
Wed Apr  6 19:07:57 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7dced7e
Wed Apr  6 19:08:02 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8c57fb5
Wed Apr  6 19:10:12 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:10: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->size= NULL ;
          ^
hashmap.c:58:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
   m->current= NULL ;
             ^
cc1: all warnings being treated as errors
Compilation failed
55b7da3
Wed Apr  6 19:10:22 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3602951
Wed Apr  6 19:29:19 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
4767000
